zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_balances@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 561
expression: stored_address_balances
---
[
  ("s39yZGB6K2s9ZjPR7TGFhk4niP5yEsdN47P", AddressBalanceLocation(AddressBalanceLocationInner(
    balance: 12500,
    received: 12500,
    location: OutputLocation(
      transaction_location: TransactionLocation(
        height: Height(1),
        index: TransactionIndex(0),
      ),
      output_index: OutputIndex(1),
    ),
  ))),
]
