zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_balances@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 561
expression: stored_address_balances
---
[
  ("s2Xi8gr2eXXT2f8Jx8axGD2qwutsQPwjNYG", AddressBalanceLocation(AddressBalanceLocationInner(
    balance: 12500,
    received: 12500,
    location: OutputLocation(
      transaction_location: TransactionLocation(
        height: Height(1),
        index: TransactionIndex(0),
      ),
      output_index: OutputIndex(1),
    ),
  ))),
]
