zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_transaction_locations@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 565
expression: stored_address_transaction_locations
---
[
  ("s39yZGB6K2s9ZjPR7TGFhk4niP5yEsdN47P", [
    TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    TransactionLocation(
      height: Height(2),
      index: TransactionIndex(0),
    ),
  ]),
]
