zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_transaction_locations@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 565
expression: stored_address_transaction_locations
---
[
  ("s2Xi8gr2eXXT2f8Jx8axGD2qwutsQPwjNYG", [
    TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    TransactionLocation(
      height: Height(2),
      index: TransactionIndex(0),
    ),
  ]),
]
