zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_utxo_data@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 564
expression: stored_address_utxos
---
[
  ("s2Xi8gr2eXXT2f8Jx8axGD2qwutsQPwjNYG", [
    Output(
      value: 12500,
      lock_script: Script("a914ef775f1f997f122a062fff1a2d7443abd1f9c64287"),
    ),
  ]),
]
